fixing horizontal scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ main button {
 
 footer {
   padding: 2em;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
